# EP_File

./: .env.example  .gitignore  DISCLAIMER.md  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
config/: sources.yaml
ingest/: from_robertdouglass.py
public_record/: epstein_criminal_case.json  maxwell_trial.json  oversight_doj_release_2025.json
samples/analysis/: demo_document_01.json  demo_document_02.json
src/ep_file/: __init__.py  acquire.py  aggregate.py  analyze.py  export.py  extract.py  safeguards.py  schema.py
web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/public/: data.json
web/src/: App.tsx  index.css
web/src/components/: ErrorBoundary.tsx  GraphView.tsx  Sidebar.tsx  SummaryView.tsx  TimelineView.tsx
web/src/lib/: data.ts
