[project]
name = "ep-file"
version = "0.1.0"
description = "KI-gestützte Analyse und Visualisierung öffentlich freigegebener Dokumente"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "pypdf>=4.0",
    "pdfplumber>=0.11",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17",
    "Pillow>=10.0",
    "networkx>=3.2",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
ep-acquire = "ep_file.acquire:main"
ep-extract = "ep_file.extract:main"
ep-analyze = "ep_file.analyze:main"
ep-export = "ep_file.export:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ep_file"]
